--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 <main>
   <div class="ratings-container">
-    <img src="./images/icon-star.svg"/>
+    <figure>
+     <img src="./images/icon-star.svg"/>
+    </figure>
     <h2>How did we do?</h2>
     <p>Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
@@ -29,13 +31,15 @@
      </div>
   </div>
 
+  <!--
   <div class="feedback-container">
    <img src="./images/illustration-thank-you.svg"/>
-    <p>You selected <!-- Add rating here --> out of 5</p>
+    <h4>You selected { } out of 5</h4>
     <h2>Thank you!</h2>
     <p>We appreciate you taking the time to give a rating. If you ever need more support, 
       don’t hesitate to get in touch!</p>
  </div>
+ -->
 </main>
 </body>
 </html>
