--- a/index.html
+++ b/index.html
@@ -19,27 +19,28 @@
     <h2>How did we do?</h2>
     <p>Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
+      <ul id="ratings-number">
+        <li><button onclick="selectRating(1)">1</button></li>
+        <li><button onclick="selectRating(2)">2</button></li>
+        <li><button onclick="selectRating(3)">3</button></li>
+      <li><button onclick="selectRating(4)">4</button></li>
+        <li><button onclick="selectRating(5)">5</button></li>
       </ul>
      <div class="button-container">
-       <button>Submit</button>
+       <button id="submitButton" onclick="submit()">Submit</button>
      </div>
   </div>
 
-  <!--
+  
   <div class="feedback-container">
    <img src="./images/illustration-thank-you.svg"/>
-    <h4>You selected { } out of 5</h4>
+    <h4 id="ratings"></h4>
     <h2>Thank you!</h2>
     <p>We appreciate you taking the time to give a rating. If you ever need more support, 
       don’t hesitate to get in touch!</p>
  </div>
- -->
+
 </main>
+<script src="./script.js"></script>
 </body>
 </html>
