--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   
-  <div class="feedback-container">
+  <div class="feedback-container" style="display: none">
    <img src="./images/illustration-thank-you.svg"/>
     <h4 id="ratings"></h4>
     <h2>Thank you!</h2>
