--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 <main>
   <div class="ratings-container">
+    <div class="content">
     <figure>
      <img src="./images/icon-star.svg"/>
     </figure>
@@ -30,13 +31,16 @@
        <button id="submitButton" onclick="submit()">Submit</button>
        <p id="buttonText"></p>
      </div>
+     </div>
   </div>
   <div class="feedback-container" style="display: none">
+  <div class="feedback-content">
    <img src="./images/illustration-thank-you.svg"/>
     <h4 id="ratings"></h4>
     <h2>Thank you!</h2>
     <p>We appreciate you taking the time to give a rating. If you ever need more support, 
       don’t hesitate to get in touch!</p>
+      </div>
  </div>
 </main>
 <script src="./script.js"></script>
